# Asteroid-Replica

./: .gitignore  CMakeLists.txt  README.md
include/SDL2/: sdl2_config.cmake
include/SDL2_image/: sdl2_image_config.cmake
include/SDL2_mixer/: sdl2_mixer_config.cmake
include/SDL2_ttf/: sdl2_ttf_config.cmake
src/: CMakeLists.txt  Main.cpp  assets.cpp  assets.h  audio.cpp  audio.h  constant.cpp  constant.h  controller.cpp  controller.h  entity.cpp  entity.h  game.cpp  game.h  header.h  main.cpp  sprite.cpp  sprite.h  texture.cpp  texture.h  timer.cpp  timer.h
src/ent/: CMakeLists.txt  bomb.cpp  bomb.h  bullet.cpp  bullet.h  entity.cpp  entity.h  explosion.cpp  explosion.h  fighter.cpp  fighter.h  obstacle.cpp  obstacle.h  player.cpp  player.h
src/ui/: CMakeLists.txt  text.cpp  text.h
